<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="15dp"
            android:text="@string/choose_a_font_size"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonSmall"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rdb_small"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButtonMedium"
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rdb_medium"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButtonLarge"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rdb_large"
                android:textSize="18sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/textInputEditText"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center"
            android:autofillHints="text"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:hint="@string/enter_text"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/moon"
            android:text="@string/btn_ok"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonOpen"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/moon"
            android:text="@string/btn_open_file"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>